Fix the player size on mobile

--- a/client/src/app/videos/+video-watch/video-watch.component.scss
+++ b/client/src/app/videos/+video-watch/video-watch.component.scss
@@ -11,8 +11,8 @@
     height: 500px;
 
     @media screen and (max-width: 600px) {
-      height: auto;
-      max-height: calc(100vh - #{$header-height});
+      width: 100vw;
+      height: calc(100vw / 1.7); // 16/9
     }
 
     // VideoJS create an inner video player
